tests/errors/cpp/expand/paste-id-string-2.h
#define m a ## "b"
m
